@@ -22,6 +22,10 @@ ubuntu-image (0.12+17.04ubuntu1) UNRELEASED; urgency=medium
   * Move the __version__ calculation to the package's __init__.py
   * Parse all YAML integer-like values as strings, and then turn them into
     integers if necessary during post-processing.  (LP: #1640523)
+  * gadget.yaml files can include an optional `format` key which names the
+    version number supported by the gadget.yaml.  Currently only format 0
+    is supported, which is a legacy version (omitting the format is
+    equivalent).  (LP: #1638926)
 
  -- Barry Warsaw <barry@ubuntu.com>  Tue, 08 Nov 2016 17:31:21 -0500
 
